feat: Event Entity 컬럼 추가 금액 단위 필드 amountUnit 추가